
* SOLR-16713: Replace Guava usages with pure Java (Kevin Risden)

* SOLR-16716: Replace commons-io usages with pure Java (Kevin Risden)

* SOLR-16715: Replace new HashMap(int) and new HashSet(int) with CollectionUtil.newHashMap / CollectionUtil.newHashSet (Kevin Risden)

* SOLR-15703: replace all SolrException.log usage in Solr to just call log.error(...) directly (Kevin Risden)

* SOLR-16604: Use Solr Client Builders directly in unit tests instead of delegating to SolrTestCaseJ4. (Eric Pugh, David Smiley)

* PR#1567: Remove deprecated constructor in MetricsMap (janhoy)

* SOLR-16745: Consolidate DelegatedSolrQueryRequest and DelegatingSolrQueryRequest (Kevin Risden)

* PR#1566: Removed deprecated members from Tuple class (janhoy)

* SOLR-16841: Added QueryResponseWriter benchmarks (Alex Deparvu via Tomás Fernández Löbbe)

==================  9.2.1 ==================

Bug Fixes
---------------------
* SOLR-16731: Use the right cluster property for displaying if TLS is enabled (Tomás Fernández Löbbe)

* SOLR-16730: Fix NPE in SystemInfoHandler for inter-node requests that would cause the Nodes page not to load.
  SystemInfoHandler no longer populates the username, roles and permissions in inter-node requests. (Tomás Fernández Löbbe)

* SOLR-16728: Fix Classloading Exception for inter-node requests when using SSL and HTTP2.
  All Jetty classes are able to be shared between the Jetty server and webApp now. (Houston Putman)

* SOLR-16734: SOLR_DATA_HOME is only honored in verbode mode (Kevin Risden)

* SOLR-16721: Java version detection fails when `_JAVA_OPTIONS` is set (janhoy, Ruoyu Zhong, Andy Webb)

* SOLR-16649: Http2SolrClient.processErrorsAndResponse uses wrong instance of ResponseParser (Andrzej Białecki)

* SOLR-16240: Fix KerberosPlugin module classloading when using the hadoop-auth module.
  Plugins in modules/packages that require the Thread contextClassLoader on startup should now work. (Houston Putman)
